# SoP_Documentation

./: .copier-answers.yml  CITATION.cff  LICENSE.md  MANIFEST.in  README.md  main.py  mkdocs.yml  pyproject.toml
data/output/: README.md
data/raw/: README.md
docs/stylesheets/: extra.css
docs/technical/cameras/: index.md  security_policy.md
docs/technical/cameras/admin/: index.md  troubleshooting.md
overrides/: main.html
src/: README.md
src/sop_documentation/: __init__.py  check_console.py  cli.py  connect.py  console_updater.py  fetch_csv_from_github.py  resolve_csv_source.py
tests/: README.md
